# aardvark

./: .gitignore  README.md  meson.build
src/: base.cpp  base.hpp  gpio.hpp  i2c.cpp  meson.build  spi.cpp  spi.hpp
src/aardvark/: base.cpp  base.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  spi.cpp  spi.hpp
subprojects/: embvm-core.wrap
